--- a/index.html
+++ b/index.html
@@ -4,33 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="calc.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="top-container">
-
+    <div class="calc">
+        <div class="calc-screen">
+            <p>0</p>
         </div>
         <br>
-        <div class="footer">
-            <button class="one"> <h3>1</h3> </button>
-            <button class="one"> <h3>2</h3> </button>
-            <button class="one"> <h3>3</h3> </button>
-            <button class="minus"> <h3>+</h3> </button>
-            <button class="one"> <h3>4</h3> </button>
-            <button class="one"> <h3>5</h3> </button>
-            <button class="one"> <h3>6</h3> </button>
-            <button class="minus"> <h3>-</h3> </button>
-            <button class="one"> <h3>7</h3> </button>
-            <button class="one"> <h3>8</h3> </button>
-            <button class="one"> <h3>9</h3> </button>
-            <button class="minus"> <h3>*</h3> </button>
-            <button class="one"> <h3>0</h3> </button>
-            <button class="C"> <h3>C</h3> </button>
-            <button class="equals"> <h3>=</h3> </button>
-            <button class="minus"> <h3>/</h3> </button>
+        <div class="buttons">
+            <div class="btn one bg-grey"> <h3>1</h3> </div>
+            <div class="btn two bg-grey"> <h3>2</h3> </div>
+            <div class="btn three bg-grey"> <h3>3</h3> </div>
+            <div class="btn plus bg-yellow"> <h3>+</h3> </div>
 
+            <div class="btn four bg-grey"> <h3>4</h3> </div>
+            <div class="btn five bg-grey"> <h3>5</h3> </div>
+            <div class="btn six bg-grey"> <h3>6</h3> </div>
+            <div class="btn minus bg-yellow"> <h3>-</h3> </div>
+
+            <div class="btn seven bg-grey"><h3>7</h3> </div>
+            <div class="btn eight bg-grey"> <h3>8</h3> </div>
+            <div class="btn nine bg-grey"> <h3>9</h3> </div>
+            <div class="btn multiply bg-yellow"> <h3>X</h3> </div>
+
+            <div class="btn zero bg-grey"> <h3>0</h3> </div>
+            <div class="btn clear bg-red"> <h3>C</h3> </div>
+            <div class="btn equals bg-green"> <h3>=</h3> </div>
+            <div class="btn division bg-yellow"> <h3>/</h3> </div>
         </div>
     </div>
+    <script src="calcul.js"></script>
 </body>
 </html>
