--- a/index.html
+++ b/index.html
@@ -3,37 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="calc.css">
+    <title>IndexPage</title>
 </head>
 <body>
-    <div class="calc">
-        <div class="calc-screen">
-            <p>0</p>
-        </div>
-        <br>
-        <div class="buttons">
-            <div class="btn one bg-grey"> <h3>1</h3> </div>
-            <div class="btn two bg-grey"> <h3>2</h3> </div>
-            <div class="btn three bg-grey"> <h3>3</h3> </div>
-            <div class="btn plus bg-yellow"> <h3>+</h3> </div>
-
-            <div class="btn four bg-grey"> <h3>4</h3> </div>
-            <div class="btn five bg-grey"> <h3>5</h3> </div>
-            <div class="btn six bg-grey"> <h3>6</h3> </div>
-            <div class="btn minus bg-yellow"> <h3>-</h3> </div>
-
-            <div class="btn seven bg-grey"><h3>7</h3> </div>
-            <div class="btn eight bg-grey"> <h3>8</h3> </div>
-            <div class="btn nine bg-grey"> <h3>9</h3> </div>
-            <div class="btn multiply bg-yellow"> <h3>X</h3> </div>
-
-            <div class="btn zero bg-grey"> <h3>0</h3> </div>
-            <div class="btn clear bg-red"> <h3>C</h3> </div>
-            <div class="btn equals bg-green"> <h3>=</h3> </div>
-            <div class="btn division bg-yellow"> <h3>/</h3> </div>
-        </div>
+    <div class="Links">
+        <nav>
+            <a href="#testpage" onclick="loadContent('testpage')">TestPage</a>
+        </nav>
     </div>
-    <script src="calcul.js"></script>
+    <main>
+        <div class="container" id="main-content">Main Content</div>
+    </main>
+    <script src="js/test.js"></script>
 </body>
 </html>
