--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <main>
         <div class="container" id="main-content">Main Content</div>
     </main>
-    <script src="js/test.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
